--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -2,9 +2,7 @@
 	<%= form_for :task, url: tasks_path do |f|%>
 	<p>
 		<h3> Tâche </h3>
-		<%= f.text_field :task_title, class: 'field1', required: true %>
-		<h4> Description </h4>
-		<%= f.text_area :task_description, class: 'field2', required: true %>
+		<%= f.text_area :task_title, class: 'field1', required: true %>
 		<h4> Date d'échéance </h4>
 		<%= f.date_field :deadline, class: 'field1', required: true %>
 	</p>
