--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,6 +24,7 @@
 			          <!-- <th>Description</th> -->
 								<th>Times left</th>
 								<th></th>
+								<th></th>
               </tr>
 		        </thead>
 
@@ -57,7 +58,7 @@
 
 
 			<footer>
-				<p> Développement :<span style="color:#1794AC"> Mathieu Harribey</span> | Github :<span style="color:#1794AC"> doolt </span></p>
+				<p> Développement :<span style="color:#1794AC"> <a href=''>Mathieu Harribey</a></span> | Github :<span style="color:#1794AC"> doolt </span></p>
 				<p> &copy; 2016 Company, Inc. </p>
 			</footer>
 <br>
