--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -6,34 +6,21 @@
       </div>
 </div>
 
+<hr class='barre'/>
+
 <div class='home' style='text-align:center;width:400px;'>
 
-<h2 class='title'>S'enregistrer</h2>
+<h2 class='title'> Viens vite créer ton compte !</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
   <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: 'field3', :required => true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password,'Mot de passe' %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off", class: 'field3', :required => true %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation, 'Confirmation' %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'field3', :required => true %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Créer mon compte", style: 'font-size:16px;vertical-align:middle;margin-top:20px;' %>
-  </div>
+    <%= f.email_field :email, autofocus: true, class: 'field3', :required => true, placeholder: 'Email' %>
+    <%= f.password_field :password, autocomplete: "off", class: 'field3', :required => true, placeholder: 'Mot de Passe' %>
+    <%= f.password_field :password_confirmation, autocomplete: "off", class: 'field3', :required => true, placeholder: 'Confirmation' %>
+    <%= f.submit "Créer mon compte", style: 'font-size:16px;vertical-align:middle;margin-top:20px;', id: 'button' %>
+</div>
 <% end %>
 
 <%= render "users/shared/links" %>
