--- a/app/views/users/shared/_links.html.erb
+++ b/app/views/users/shared/_links.html.erb
@@ -1,20 +1,20 @@
 
 <%- if controller_name != 'sessions' %>
 <div class='bouton_auth'>
-  <%= link_to "Se connecter", new_session_path(resource_name) %><br />
+  <%= link_to "Déjà un compte ? Connectez vous !", new_session_path(resource_name) %><br />
 </div>
 <% end -%>
 
 
 <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
 <div class='bouton_auth'>
-  <%= link_to "Créer un compte", new_registration_path(resource_name) %><br />
+  <%= link_to "Pas encore inscrit ? Crée ton compte !", new_registration_path(resource_name) %><br />
 </div>
 <% end -%>
 
 
 <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-<div class='bouton_auth'>
+<div class='bouton_forgot'>
   <%= link_to "Mot de passe oublié ?", new_password_path(resource_name) %><br />
 </div>
 <% end -%>
