--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -19,7 +19,7 @@
     <%= f.email_field :email, autofocus: true, class: 'field3', :required => true, placeholder: 'Email' %>
     <%= f.password_field :password, autocomplete: "off", class: 'field3', :required => true, placeholder: 'Mot de Passe' %>
     <%= f.password_field :password_confirmation, autocomplete: "off", class: 'field3', :required => true, placeholder: 'Confirmation' %>
-    <%= f.submit "Créer mon compte", style: 'font-size:16px;vertical-align:middle;margin-top:20px;', id: 'button' %>
+    <%= f.submit "Créer mon compte", style: 'font-size:16px;vertical-align:middle;margin-top:20px;', class: 'button' %>
 </div>
 <% end %>
 
