--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -158,14 +158,17 @@ table{
 }
 
 th {
-  margin: 15px;
-  padding: 15px;
+  padding: 30px;
+}
+
+tbody tr {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  margin:20px 0px;
 }
 
 td {
-  padding:10px;
-  margin: 15px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding:5px;
+  // border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 td,th {
@@ -174,7 +177,6 @@ td,th {
 }
 
 thead {
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   color:#1794AC;
 }
 
@@ -195,8 +197,8 @@ thead {
   margin-bottom:10px;
 }
 
-#button {
-    width: 25vh;
+.button {
+    width: 30vh;
     height:auto;
     vertical-align: middle;
     text-align: center;
@@ -209,8 +211,12 @@ thead {
     transition: 0.2s;
 }
 
-#button:hover {
+.button:hover {
   color:#1794AC;
+}
+
+#icon {
+  margin-left: 5vh;
 }
 
 .field{
@@ -296,7 +302,6 @@ thead {
 .details {
   width:700px;
   height: 110%;
-  background-color: #95a5a6;
   margin:auto;
   margin-top: 10%;
   padding:10px 50px;
