--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -43,12 +43,13 @@
 										<% end %>
 							 	</td>
 							 	<td>
-								 		<%= link_to image_tag('images/edit.png'), edit_task_path(t) %>
+								 		<%= link_to image_tag('images/edit.png'), edit_task_path(t), id: 'icon' %>
 							 	</td>
 								<td>
 										<%= link_to image_tag('images/delete.png'), task_path(t), method: :delete%>
 								</th>
 							</tr>
+						</br>
 					<%end%>
 							<tr></tr>
 
@@ -58,7 +59,7 @@
 
 
 			<footer>
-				<p> Développement :<span style="color:#1794AC"> <a href=''>Mathieu Harribey</a></span> | Github :<span style="color:#1794AC"> doolt </span></p>
+				<p> Développement :<span style="color:#1794AC"> <a href='http://mathieuharribey.fr/'>Mathieu Harribey</a></span> | Github :<span style="color:#1794AC"> <a href='http://github.com/mharribey/doolt/'>doolt</a> </span></p>
 				<p> &copy; 2016 Company, Inc. </p>
 			</footer>
 <br>
