--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -162,8 +162,8 @@ th {
 }
 
 tbody tr {
-  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
-  margin:20px 0px;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.2);
+  margin-bottom: 3vh;
 }
 
 td {
@@ -178,6 +178,10 @@ td,th {
 
 thead {
   color:#1794AC;
+}
+
+tbody {
+  text-align: center;
 }
 
 .row {
@@ -259,22 +263,6 @@ thead {
 
 
 /* AUTRES */
-
-.field1 {
-  width:120px;
-  height:20px;
-}
-
-.field2 {
-  width:350px;
-  height:70px;
-  padding:10px;
-}
-
-.field3 {
-  margin:10px 0px;
-  width:200px;
-}
 
 .bouton {
   font-family: 'Coda', cursive;
