--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
 
 				 <h1 class='item-navbar' id='main-title'>Doolt</h1>
 				<div class="item-navbar" id='add-task'>
-					<%= link_to 'Ajoutez une tâche', new_task_path %>
+					<p> Bienvenue, <span style='color:#1794AC'><%= current_user.email %></span> !</p>
 				</div>
 				<div class="item-navbar" id='edit-profil'>
 					<%= link_to 'Profil', edit_user_registration_url%>
@@ -30,28 +30,33 @@
 
             <tbody>
 								<% @tasks.each do |t|%>
-		          <tr>
-			          <td style="width:400px"><%= t.task_title %></td>
-		            <!-- <td style="width:400px"><%= t.task_description %></td> -->
-								<td><% time = ((t.deadline.to_time - Time.now).to_i) %>
-										<% if time >= 0 %>
-											<p><%= (time/3600) / 24 %>j <%= (time/3600) % 24%>h <%= (time/60) % 60 %>m</p>
-										<%elsif	time < 0 %>
-											<p> Supposed to be done </p>
-										<%else%>
-											<p> DONE </p>
-										<% end %>
-							 	</td>
-							 	<td>
-								 		<%= link_to image_tag('images/edit.png'), edit_task_path(t), id: 'icon' %>
-							 	</td>
-								<td>
-										<%= link_to image_tag('images/delete.png'), task_path(t), method: :delete%>
-								</th>
-							</tr>
-
-					<%end%>
-
+				          <tr>
+					          <td style="width:400px"><%= t.task_title %></td>
+				            <!-- <td style="width:400px"><%= t.task_description %></td> -->
+										<td><% time = ((t.deadline.to_time - Time.now).to_i) %>
+												<% if time >= 0 %>
+													<p><%= (time/3600) / 24 %>j <%= (time/3600) % 24%>h <%= (time/60) % 60 %>m</p>
+												<%elsif	time < 0 %>
+													<p> Supposed to be done </p>
+												<%else%>
+													<p> DONE </p>
+												<% end %>
+									 	</td>
+									 	<td>
+										 		<%= link_to image_tag('images/edit.png'), edit_task_path(t), id: 'icon' %>
+										</td>
+										<td>
+													<%= link_to image_tag('images/delete.png'), task_path(t), method: :delete%>
+									 	</td>
+									</tr>
+								<% end %>
+									<tr>
+											<%= form_for :task, url: tasks_path do |f|%>
+													<td> <%= f.text_field :task_title, class: 'form', required: true, placeholder: 'Intitulé' %> </td>
+													<td> <%= f.date_field :deadline, class: 'form', required: true %> </td>
+													<td colspan="2"> <%= f.submit "Add", data: { disable_with: 'Ajout en cours...'}, style: 'font-size:16px;text-align:center;width:15vh;', class: 'button' %></td>
+											<%end%>
+									</tr>
 			      </tbody>
 			    </table>
 				</div>
